python-notifier (0.9.7-8) unstable; urgency=medium

  * Bug #52273: use monotonic time for notifier timers

 -- Florian Best <best@univention.de>  Thu, 26 Nov 2020 21:22:57 +0100

python-notifier (0.9.7-7) unstable; urgency=medium

  * Bug #50461: fix some PEP 8 warnings

 -- Florian Best <best@univention.de>  Mon, 09 Dec 2019 14:50:12 +0100

python-notifier (0.9.7-6) unstable; urgency=medium

  * Bug #50461: Migrate to dh-python and Python 3

 -- Florian Best <best@univention.de>  Thu, 05 Dec 2019 12:30:53 +0100

python-notifier (0.9.7-5) unstable; urgency=low

  * Bug #47114: Fix memory leak

 -- Philipp Hahn <hahn@univention.de>  Wed, 04 Jul 2018 10:36:25 +0200

python-notifier (0.9.7-4) unstable; urgency=medium

  * Bug #40510: fix KeyError in step() which was caused by socket removal
  	in a timer()

 -- Florian Best <best@univention.de>  Wed, 27 Jan 2016 18:12:51 +0100

python-notifier (0.9.7-3) unstable; urgency=low

  * Bug #37457: update version
  * cherry-pick 8a8352a7849f2362ddde82daf1c1febf5d295953

 -- Florian Best <best@univention.de>  Wed, 06 May 2015 19:31:54 +0200

python-notifier (0.9.7-2) unstable; urgency=medium

  * Bug #37457: revert dh_python2 use

 -- Florian Best <best@univention.de>  Tue, 05 May 2015 18:05:44 +0200

python-notifier (0.9.7-1) unstable; urgency=medium

  * Bug #37457: fix FTBFS

 -- Florian Best <best@univention.de>  Tue, 05 May 2015 17:18:38 +0200

python-notifier (0.9.7-1-univention1) unstable; urgency=medium

  * Bug #37457: update version

 -- Florian Best <best@univention.de>  Tue, 05 May 2015 17:01:52 +0200

python-notifier (0.9.6-1-univention1) unstable; urgency=low

  * Bug #37457: Initial commit

 -- Florian Best <best@univention.de>  Tue, 05 May 2015 16:07:52 +0200