@@ -1,6 +1,7 @@
 python-notifier (0.9.7-8) unstable; urgency=medium
 
   * Bug #52273: use monotonic time for notifier timers
+  * Bug #52273: also use monotonic time in Python 2
 
  -- Florian Best <best@univention.de>  Thu, 26 Nov 2020 21:22:57 +0100
 
